fixed line spacing in paragraphs

--- a/dev/sass/components/_modal.scss
+++ b/dev/sass/components/_modal.scss
@@ -294,7 +294,6 @@ html.remodal-is-locked {
   margin:30px auto;*/
   color:$medText;
   line-height:26px;
-  letter-spacing:0;
   position:relative;
   font-weight:400;
   padding-bottom:30px;
